src/objects/Survey_Response__c.object
<CustomObject>
    <description>Survey Response received from contacts</description>
    <fields>
        <fullName>Date_Value__c</fullName>
        <description>Response Date Value</description>
        <inlineHelpText>Response Date Value</inlineHelpText>
        <label>Date Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <description>Response Number Value</description>
        <inlineHelpText>Response Number Value</inlineHelpText>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Identifier__c</fullName>
        <description>Unique question identifier</description>
        <label>Question Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>Question Text</description>
        <inlineHelpText>Question Text</inlineHelpText>
        <label>Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Target__c</fullName>
        <description>Survey Target</description>
        <inlineHelpText>Survey Target - Master</inlineHelpText>
        <label>Survey Target</label>
        <referenceTo>Survey_Target__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <description>Text Value</description>
        <inlineHelpText>Text Value</inlineHelpText>
        <label>Text Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>